# fi5pool

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.sh  service
.github/workflows/: publish-docker.yml  rust-check.yml
config/: config.toml
deploy/: README.md
deploy/full/: docker-compose.yml
deploy/full/fi5pool/config/: config.toml
deploy/full/influxdb2/: admin-password  admin-token  admin-username  fi5pool-lite_dashboard.json  start_influx.sh
deploy/lite/: docker-compose.yml
deploy/lite/ckb-node/mainnet/: ckb-miner.toml  ckb.toml
deploy/lite/fi5pool/config/: config.toml
src/: ckb_rpc.rs  config.rs  http.rs  influx.rs  job.rs  json_rpc.rs  main.rs  pool.rs  worker.rs
